# fastapi_websocket_rpc_pubsub_sample

./: .gitignore  README.md  config.toml  pyproject.toml  start_servers.sh  stop_servers.sh
src/rpc_pubsub_sample/: __init__.py  app_config.py  node_app.py  server_a.py  server_b.py
src/rpc_pubsub_sample/templates/: dashboard.html
